<resources>
    <string name="app_name">RUCafe</string>
    <string name="ru_cafe">RU Cafe</string>
    <string name="ordering_coffee">Ordering Coffee</string>
    <string name="ordering_donuts">Ordering Donuts</string>
    <string name="store_orders">Store Orders</string>
    <string name="current_orders">Current Orders</string>
    <string name="add_to_order">Add to Order</string>
    <string name="you_selected">You selected:</string>
    <string name="donut_hole">Donut Hole</string>
    <string name="cake_donut">Cake Donut</string>
    <string name="yeast_donut">Yeast Donut</string>
    <string name="cream">Cream</string>
    <string name="milk">Milk</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="syrup">Syrup</string>
    <string name="caramel">Caramel</string>
    <string name="subtotalCoffee">Subtotal $</string>
    <string name="subtotalDonut">Subtotal $</string>
    <string name="plusCount">+</string>
    <string name="subtotal">Subtotal $</string>
    <string name="your_order_Coffee">Your Order</string>
    <string name="your_order_Donut">Your Order</string>
    <string name="subtotal_current_order">Subtotal $</string>
    <string name="sales_tax_current_order">Sales Tax $</string>
    <string name="total_current_order">Total $</string>
    <string name="place_current_order">Place Order</string>
    <string name="remove_current_order">Remove</string>
    <string name="cancel_order_store_order">Cancel Order</string>
    <string name="select_current_order">Select</string>
    <string name="item_id_current_order">Item ID</string>
    <string name="item_details_current_order">Item Details</string>
    <string name="price_current_order">Price</string>
    <string name="_0_0">0.0</string>
    <string name="plus_count_donut">+</string>
    <string name="default_quantity_donuts">0</string>
    <string name="minus_count_donuts">-</string>
    <string name="cofee_default_subtotal">0.0</string>
    <string name="order_id_store_orders">Order ID</string>
    <string name="total_amount_store_orders">Total Amount</string>
    <string name="view_details_store_orders">View Details</string>
    <string name="short_coffee_size">Short</string>
    <string name="tall_coffee_size">Tall</string>
    <string name="grande_coffee_size">Grande</string>
    <string name="venti_coffee_size">Venti</string>
    <string name="default_current_order_subtotal">0.0</string>
    <string name="sales_tax_default_current">0.0</string>
    <string name="subtotal_default_current">0.0</string>
    <string name="price_table_current_order">price</string>
    <string name="donut_image_main">Donut image</string>
    <string name="coffee_image_main">coffee image</string>
    <string name="current_order_main">current order image</string>
    <string name="store_order_image">store order image</string>
    <string-array name="flavorsSpinner">
        <item>Glazed</item>
        <item>Strawberry</item>
        <item>Chocolate</item>
    </string-array>
    <string-array name="sizeSpinner">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
</resources>