<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderingCoffeeActivity">

    <RadioGroup
            android:layout_width="146dp"
            android:layout_height="147dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="380dp" android:id="@+id/coffee_radio_grp">
        <RadioButton
                android:text="@string/short_coffee_size"
                android:layout_width="match_parent"
                android:checked="true"
                android:layout_height="wrap_content" android:id="@+id/radioButton4" android:onClick="setCoffeeSize"/>
        <RadioButton
                android:text="@string/tall_coffee_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton3" android:onClick="setCoffeeSize"/>
        <RadioButton
                android:text="@string/grande_coffee_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton2" android:onClick="setCoffeeSize"/>
        <RadioButton
                android:text="@string/venti_coffee_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton" android:onClick="setCoffeeSize"/>
    </RadioGroup>
    <Button
            android:text="@string/add_to_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderBtnDonut"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.534"
            android:onClick="addToOrderCoffee"/>
    <CheckBox
            android:text="@string/cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/creamCheckbox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.064"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077" android:onClick="addInSelect"/>
    <CheckBox
            android:text="@string/milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/milkCheckbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.11"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073" android:onClick="addInSelect"/>
    <CheckBox
            android:text="@string/whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/whippedCheckbox"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="108dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.095"
            android:onClick="addInSelect"/>
    <CheckBox
            android:text="@string/caramel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/caramelCheckbox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.61"
            app:layout_constraintVertical_bias="0.11" android:onClick="addInSelect"/>
    <CheckBox
            android:text="@string/syrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/syrupCheckbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.064"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578" android:onClick="addInSelect"/>
    <TextView
            android:text="@string/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/subtotal_textview_coffee"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.679"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"/>
    <TextView
            android:text="@string/cofee_default_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/default_subtotal_coffee"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="484dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="252dp"
            android:layout_marginRight="252dp" android:layout_marginLeft="5dp" android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/subtotal_textview_coffee"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="228dp" app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>