<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <RadioGroup
            android:layout_width="146dp"
            android:layout_height="147dp"
            android:layout_centerInParent="true" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/donutTypeRadioGrp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.231">


        <RadioButton
                android:id="@+id/radio_yeast"
                android:layout_width="117dp"
                android:layout_height="44dp"
                android:text="@string/yeast_donut"
                android:onClick="checkButton"
                android:checked="true"/>
        <RadioButton
                android:id="@+id/radio_cake"
                android:layout_width="117dp"
                android:layout_height="44dp"
                android:text="@string/cake_donut"
                android:onClick="checkButton"
        />
        <RadioButton
                android:id="@+id/radio_hole"
                android:layout_width="117dp"
                android:layout_height="44dp"
                android:text="@string/donut_hole"
                android:onClick="checkButton"
        />
    </RadioGroup>
    <TextView
            android:id="@+id/text_view_selected"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/you_selected"
            android:textSize="20sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="312dp" app:layout_constraintHorizontal_bias="0.494"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/flavorsSpinner"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.106"/>
    <Button
            android:text="@string/add_to_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderBtnCoffee"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.538"/>
    <TextView
            android:text="@string/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.626"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"/>

</androidx.constraintlayout.widget.ConstraintLayout>