<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_margin="40dp">

        <!-- Table Heading -->

        <TableRow
                android:background="@color/colorAccent">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select_current_order"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
            />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_id_current_order"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_details_current_order"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
            />


        </TableRow>

        <!-- Table Data -->

    </TableLayout>
    <Button
            android:text="@string/place_current_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="169dp" android:layout_marginEnd="169dp"
            android:layout_alignParentBottom="true" android:layout_marginBottom="123dp"/>
    <Button
            android:text="@string/remove_current_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="178dp" android:layout_marginEnd="178dp"
            android:layout_above="@+id/button" android:layout_marginBottom="154dp"/>
    <TextView
            android:text="@string/subtotal_current_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_alignParentBottom="true"
            android:layout_marginBottom="291dp" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="202dp" android:layout_marginEnd="202dp"/>
    <TextView
            android:text="@string/sales_tax_current_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_alignParentBottom="true"
            android:layout_marginBottom="268dp" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="193dp" android:layout_marginEnd="193dp"/>
    <TextView
            android:text="@string/total_current_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_alignParentBottom="true"
            android:layout_marginBottom="238dp" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="207dp" android:layout_marginEnd="207dp"/>
    <TextView
            android:text="0.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_alignParentBottom="true"
            android:layout_marginBottom="291dp" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="181dp" android:layout_marginEnd="181dp"/>
    <TextView
            android:text="0.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_alignParentBottom="true"
            android:layout_marginBottom="269dp" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="169dp" android:layout_marginEnd="169dp"/>
    <TextView
            android:text="0.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_alignParentBottom="true"
            android:layout_marginBottom="239dp" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="179dp" android:layout_marginEnd="179dp"/>

</RelativeLayout>