<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/relativeLayout">


    <Button
            android:text="@string/store_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/storeOrdersBtn"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.681" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginRight="400dp" android:layout_marginEnd="400dp"
    />
    <Button
            android:text="@string/ordering_coffee"
            android:layout_width="155dp"
            android:layout_height="60dp"
            android:id="@+id/orderCoffeeBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="472dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="400dp"
            android:layout_marginEnd="400dp" app:layout_constraintHorizontal_bias="0.058"/>
    <Button
            android:text="@string/current_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/currentOrderBtn"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.681"
            android:layout_marginLeft="150dp" android:layout_marginStart="150dp"
            app:layout_constraintStart_toEndOf="@+id/storeOrdersBtn" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/ordering_donuts"
            android:layout_width="140dp"
            android:layout_height="58dp" android:id="@+id/orderDonutsBtn"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.234" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginLeft="400dp" android:layout_marginStart="400dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ru_cafe"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.462"/>


</androidx.constraintlayout.widget.ConstraintLayout>