<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <TableLayout
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginLeft="40dp" android:layout_marginTop="40dp" android:layout_marginStart="40dp"
            android:layout_marginRight="40dp" android:layout_marginEnd="40dp" android:layout_marginBottom="40dp"
            android:id="@+id/tableLayoutStoreOrder">

        <!-- Table Heading -->

        <TableRow
                android:background="@color/colorAccent">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select_current_order"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
            />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/order_id_store_orders"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount_store_orders"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
            />
            <TextView
                    android:layout_width="51dp"
                    android:layout_height="wrap_content"
                    android:text="@string/view_details_store_orders"
                    android:textColor="@android:color/white"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:id="@+id/textView13"/>


        </TableRow>

    </TableLayout>
    <Button
            android:text="@string/cancel_order_store_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cancelOrderStoreBtn" android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" android:layout_marginRight="150dp" android:layout_marginEnd="150dp"
            android:layout_alignParentBottom="true" android:layout_marginBottom="203dp"/>
    <ScrollView
            android:layout_width="280dp"
            android:scrollbars="vertical"
            android:layout_height="133dp" android:layout_alignParentBottom="true" android:layout_marginBottom="270dp"
            android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
            android:layout_marginRight="51dp" android:layout_marginEnd="51dp" android:fillViewport="false"
            android:background="#03A9F4" android:id="@+id/scrollViewid">
    </ScrollView>

</RelativeLayout>

